--- a/src/app/shared/m-data-block/m-data-block.component.html
+++ b/src/app/shared/m-data-block/m-data-block.component.html
@@ -1,1 +1,5 @@
-<p>m-data-block works!</p>
+<p [style.flex-grow]="width">
+    <label>{{fieldDefinition.label}}</label>
+    
+    <span>{{value}}</span>
+</p>
