--- a/src/app/shared/m-table/m-table.component.html
+++ b/src/app/shared/m-table/m-table.component.html
@@ -1,1 +1,20 @@
-<p-table></p-table>
+<p-table [columns]="columns" [value]="data">
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            @for(col of columns; track col) {
+            <th>
+                {{ col }}
+            </th>
+        }
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-data let-columns="columns">
+        <tr>
+            @for(col of columns; track col) {
+                <td>
+                    {{ data[col] }}
+                </td>
+            }
+        </tr>
+    </ng-template>
+</p-table>
