--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -1,3 +1,9 @@
-::ng-deep  .m-table {
-    font-size: .7em;
+::ng-deep  {
+    .m-table {
+        font-size: .7em;
+    }
+    .p-datatable .p-datatable-thead > tr > th{
+        background-color: #fff;
+         color: #2c2283;
+    }
 }
